# mouse_position_tracking

./: CMakeLists.txt  LICENSE  README.md  main.cpp  setup.cfg  track_mouse.py
darkchannel/: darkchannel.cpp
darkchannel/include/: darkchannel.h
mouse_detection/: __init__.py  detect_mouse.py  mycam.py  test_detect_mouse.py
resouces/: mouse_cut.avi
