[metadata]
name = mouse_detection
version = 0.0.1

[options]
packages = mouse_detection, mouse_detection.bin
install_requires =
    opencv-python >= 4.5.1.48
    numpy >= 1.18.1
    matplotlib >= 3.1.3
include_package_data = True

;scripts =
;    bin/remove_darkchannel.py

[options.entry_points]
console_scripts =
    remove_darkchannel = mouse_detection:remove_darkchannel
    remove_background = mouse_detection:remove_background